test/official_tests/if/var_in_then.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
if (true) var foo;
